// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with a NG address value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c2 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:600px) {
  .c2 {
    -webkit-flex: 0 1 calc(50% - 9px);
    -ms-flex: 0 1 calc(50% - 9px);
    flex: 0 1 calc(50% - 9px);
  }
}

<div
  className={null}
  style={Object {}}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Field({"name":"country","label":"Country","labelFor":"country_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"fullName","label":"Name","labelFor":"fullName_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address1","label":"Address","labelFor":"address1_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address2","label":"Address Line 2","labelFor":"address2_AddressForm_3","isOptional":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"city","label":"City","labelFor":"city_AddressForm_3","children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"region","label":"Region","labelFor":"region_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"postal","label":"Postal Code","labelFor":"postal_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"phone","label":"Phone","labelFor":"phone_AddressForm_3","isRequired":true,"children":"[Object]"})
    </div>
  </div>
</div>
`;

exports[`Render with a US address value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c2 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:600px) {
  .c2 {
    -webkit-flex: 0 1 calc(50% - 9px);
    -ms-flex: 0 1 calc(50% - 9px);
    flex: 0 1 calc(50% - 9px);
  }
}

<div
  className={null}
  style={Object {}}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Field({"name":"country","label":"Country","labelFor":"country_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"fullName","label":"Name","labelFor":"fullName_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address1","label":"Address","labelFor":"address1_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address2","label":"Address Line 2","labelFor":"address2_AddressForm_2","isOptional":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"city","label":"City","labelFor":"city_AddressForm_2","children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"region","label":"Region","labelFor":"region_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"postal","label":"Postal Code","labelFor":"postal_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"phone","label":"Phone","labelFor":"phone_AddressForm_2","isRequired":true,"children":"[Object]"})
    </div>
  </div>
</div>
`;

exports[`Render with a partial address value 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c2 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:600px) {
  .c2 {
    -webkit-flex: 0 1 calc(50% - 9px);
    -ms-flex: 0 1 calc(50% - 9px);
    flex: 0 1 calc(50% - 9px);
  }
}

<div
  className={null}
  style={Object {}}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Field({"name":"country","label":"Country","labelFor":"country_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"fullName","label":"Name","labelFor":"fullName_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address1","label":"Address","labelFor":"address1_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address2","label":"Address Line 2","labelFor":"address2_AddressForm_4","isOptional":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"city","label":"City","labelFor":"city_AddressForm_4","children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"region","label":"Region","labelFor":"region_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"postal","label":"Postal Code","labelFor":"postal_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"phone","label":"Phone","labelFor":"phone_AddressForm_4","isRequired":true,"children":"[Object]"})
    </div>
  </div>
</div>
`;

exports[`Render with locales 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c2 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:600px) {
  .c2 {
    -webkit-flex: 0 1 calc(50% - 9px);
    -ms-flex: 0 1 calc(50% - 9px);
    flex: 0 1 calc(50% - 9px);
  }
}

<div
  className={null}
  style={Object {}}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Field({"name":"country","label":"Country","labelFor":"country_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"fullName","label":"Name","labelFor":"fullName_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address1","label":"Address","labelFor":"address1_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address2","label":"Address Line 2","labelFor":"address2_AddressForm_5","isOptional":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"city","label":"City","labelFor":"city_AddressForm_5","children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"region","label":"Region","labelFor":"region_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"postal","label":"Postal Code","labelFor":"postal_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"phone","label":"Phone","labelFor":"phone_AddressForm_5","isRequired":true,"children":"[Object]"})
    </div>
  </div>
</div>
`;

exports[`Render with only the components on props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

.c2 {
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
}

@media (min-width:600px) {
  .c2 {
    -webkit-flex: 0 1 calc(50% - 9px);
    -ms-flex: 0 1 calc(50% - 9px);
    flex: 0 1 calc(50% - 9px);
  }
}

<div
  className={null}
  style={Object {}}
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Field({"name":"country","label":"Country","labelFor":"country_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"fullName","label":"Name","labelFor":"fullName_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address1","label":"Address","labelFor":"address1_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"address2","label":"Address Line 2","labelFor":"address2_AddressForm_1","isOptional":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"city","label":"City","labelFor":"city_AddressForm_1","children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"region","label":"Region","labelFor":"region_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c2"
    >
      Field({"name":"postal","label":"Postal Code","labelFor":"postal_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
    <div
      className="c1"
    >
      Field({"name":"phone","label":"Phone","labelFor":"phone_AddressForm_1","isRequired":true,"children":"[Object]"})
    </div>
  </div>
</div>
`;
